--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/display/display"
   ],
   "window": {
     "backgroundTextStyle": "light",
