--- a/project.config.json
+++ b/project.config.json
@@ -1,12 +1,12 @@
 {
-  "description": "项目配置文件",
+  "description": "Project configuration file",
   "packOptions": {
     "ignore": [],
     "include": []
   },
   "miniprogramRoot": "miniprogram/",
   "compileType": "miniprogram",
-  "projectname": "ts-demo",
+  "projectname": "wmini-task",
   "setting": {
     "useCompilerPlugins": [
       "typescript"
@@ -16,7 +16,10 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "condition": false
+    "condition": false,
+    "minified": false,
+    "es6": true,
+    "enhance": true
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
