--- a/project.config.json
+++ b/project.config.json
@@ -19,7 +19,14 @@
     "condition": false,
     "minified": false,
     "es6": true,
-    "enhance": true
+    "enhance": true,
+    "packNpmManually": true,
+    "packNpmRelationList": [
+      {
+        "packageJsonPath": "package.json",
+        "miniprogramNpmDistDir": "miniprogram/"
+      }
+    ]
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
