Fixed page generation and removed unused packages

--- a/project.config.json
+++ b/project.config.json
@@ -17,10 +17,9 @@
       "outputPath": ""
     },
     "condition": false,
-    "minified": false,
+    "minified": true,
     "es6": true,
     "enhance": true,
-    "packNpmManually": true,
     "packNpmRelationList": [
       {
         "packageJsonPath": "package.json",
