Added package validator for url checking

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "author": "",
   "license": "",
   "devDependencies": {
+    "@types/validator": "^13.7.16",
     "miniprogram-api-typings": "3.9.1"
+  },
+  "dependencies": {
+    "validator": "^13.9.0"
   }
 }
