--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
   "simulatorPluginLibVersion": {},
   "condition": {},
   "srcMiniprogramRoot": "miniprogram/",
-  "appid": "wx437081fe1516784e",
+  "appid": "wxbda8617b0219e08a",
   "libVersion": "2.32.2",
   "editorSetting": {
     "tabIndent": "insertSpaces",
