--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,7 +1,7 @@
 {
-  "projectname": "wmini-testtask",
+  "projectname": "Card app",
   "setting": {
     "compileHotReLoad": true
   },
-  "libVersion": "2.32.2"
+  "libVersion": "2.32.3"
 }
